objects/Partner_Attended_Event__c.object
<CustomObject>
    <description>to capture events a partner attended within an Agreement</description>
    <fields>
        <fullName>Expo__c</fullName>
        <label>Expo</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Expo 1</fullName>
                </value>
                <value>
                    <fullName>Expo 2</fullName>
                </value>
                <value>
                    <fullName>Expo3</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <label>Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Partner_Agreement__c</fullName>
        <label>Partner Agreement</label>
        <referenceTo>Partner_Agreement__c</referenceTo>
        <relationshipLabel>Partner Attended Events</relationshipLabel>
        <relationshipName>Partner_Attended_Events</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Year__c</fullName>
        <description>indicates the year the partner attended the expo</description>
        <label>Year</label>
        <length>4</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>Partner Attended Event</label>
    <nameField>
        <displayFormat>B-{000000}</displayFormat>
        <label>Partner Attended Event Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Partner Attended Events</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>